@@ -1,0 +1,5 @@
+Give 10 titles for the article about "Time Tracking" on "Info" page of the app. Should be less than 80 characters.
+
+Increaser's Time Tracking tool helps you gain control of your time by letting you track how long you spend on tasks and projects. With focus sessions and the ability to adjust session times, you can easily monitor your progress and stay aligned with your goals. Whether you're working toward personal achievements or managing multiple projects, Time Tracking provides the insights needed to improve your productivity and make every minute count.
+
+We have a title, first paragraph, and a video. Now write an article explaining "Time Tracking", all its functionality, and how it relates to other tools in the app. Keep the article short, but it still should serve as a knowledge base for the user. Keep it engaging an informative. Return it as a code snippet with an unstyled HTML.
